--- a/blogapp/package.json
+++ b/blogapp/package.json
@@ -1,4 +1,3 @@
-
 {
   "name": "blogminds",
   "version": "1.0.0",
@@ -40,6 +39,7 @@
     "helmet": "^7.1.0",
     "http-status-codes": "^2.3.0",
     "jsonwebtoken": "^9.0.2",
+    "mongodb": "^6.12.0",
     "mongoose": "^8.2.2",
     "morgan": "^1.10.0",
     "multer": "1.4.5-lts.1",
