--- a/blogapp/client/package.json
+++ b/blogapp/client/package.json
@@ -18,14 +18,23 @@
     "@editorjs/image": "^2.10.1",
     "@editorjs/list": "^2.0.2",
     "@editorjs/paragraph": "^2.11.7",
+    "@emailjs/browser": "^4.4.1",
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
+    "@mui/icons-material": "^6.3.1",
     "@mui/material": "^6.3.1",
     "@reduxjs/toolkit": "^2.5.0",
+    "date-fns": "^4.1.0",
+    "mui-one-time-password-input": "^3.0.2",
     "react": "^18.3.1",
+    "react-confirm": "^0.3.0-7",
     "react-dom": "^18.3.1",
+    "react-dropzone": "^14.3.5",
     "react-hot-toast": "^2.5.1",
+    "react-icons": "^5.4.0",
+    "react-infinite-scroll-component": "^6.1.0",
     "react-redux": "^9.2.0",
+    "react-router-dom": "^7.1.1",
     "title-editorjs": "^1.0.2"
   },
   "devDependencies": {
