--- a/blogapp/package.json
+++ b/blogapp/package.json
@@ -33,6 +33,10 @@
     "cloudinary": "^2.0.3",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
+    "editorjs-alert": "^1.1.4",
+    "editorjs-button": "^3.0.3",
+    "editorjs-text-alignment-blocktune": "^1.0.3",
+    "editorjs-text-color-plugin": "^2.0.4",
     "express": "^4.18.3",
     "express-async-errors": "^3.1.1",
     "express-rate-limit": "^6.11.2",
